* Removed search optimisation obsoleted by tth's and bloom filters (those of
  you with a large number of files in your share, post on the forum if you notice
  any big increase in CPU usage)
* Added option not to download files already in share (by TTH) (thanks TPO)
* Help file work (garg, ullner)
* Added petabytes (PiB) (thanks garg)
* Clicking on active tab will deactivate it (thanks garg)


-- 0.4034 2004-10-03 --
* Help file additions (thanks naga & ullner)
* Fixed a few issues with files not being hashed correctly (thanks garg)
* More ADC fixes (thanks sed)
* Fixed some ADLSearch stuff (thanks garg)
* Added item count to finished frames (thanks garg)
* Fixed user commands encoding (thanks garg)
* Added last search time to search spy (thanks ullner)
* Fixed queue size growing on queue item move
* Fixed missing file list on 0 byte share
* Fixed missing search results (thanks garg)

-- 0.4033 2004-09-27 --
*** WARNING *** 
This update will change all your config files and queues, and it is 
very probable that you won't be able to revert back to an older version
once the update has been done!!!
Also, finish your queue file before upgrading if you care for your
international filenames in it - they will not be correctly converted.
*** WARNING ***

* Fixed a rare download crash (thanks farcry)
* Fixed tab dropping in the last position (thanks trem)
* Fixed directory sorting in the file listings (thanks trem)
* Files that can't be moved to the target drive from the temp folder
  are now renamed to their real name
* Text with unix and mac line end encodings should now be correctly displayed
* TTH Values are used for right click download menus when available
* Upgraded to WTL 7.5.4196
* Updated license to allow others to release legal binaries compiled against WTL
* Moved the core structures to UTF-8 to allow correct internationalisation (major change)
* Moving towards full unicodization of the user interface, MS layer for unicode