@@ -24,6 +24,7 @@
 #include "ShareManager.h"
 #include "StringTokenizer.h"
 #include "AdcCommand.h"
+#include "ConnectionManager.h"
 
 void Command::parse(const string& aLine, bool nmdc /* = false */) {
 	string::size_type i = 5;
@@ -219,12 +220,43 @@ void AdcHub::handle(Command::QUI, Command& c) throw() {
 	fire(ClientListener::UserRemoved(), this, p);
 }
 
+void AdcHub::handle(Command::CTM, Command& c) throw() {
+	User::Ptr p = ClientManager::getInstance()->getUser(c.getFrom(), false);
+	if(!p || p == getMe())
+		return;
+	if(c.getParameters().size() != 3 || c.getParameters()[1] != "ADC/1.0")
+		return;
+	//ConnectionManager::getInstance()->connect(p->getIp(), (short)Util::toInt(c.getParameters()[2]), c.getParameters()[0], getMe()->getCID());
+}
+
+void AdcHub::handle(Command::RCM, Command& c) throw() {
+	if(SETTING(CONNECTION_TYPE) != SettingsManager::CONNECTION_ACTIVE)
+		return;
+	User::Ptr p = ClientManager::getInstance()->getUser(c.getFrom(), false);
+	if(!p || p == getMe())
+		return;
+	if(c.getParameters().size() != 2 || c.getParameters()[1] != "ADC/1.0")
+		return;
+    connect(&*p, c.getParameters()[0]);
+}
+
 void AdcHub::connect(const User* user) {
+	u_int32_t r = Util::rand();
+	connect(user, Encoder::toBase32((u_int8_t*)&r, sizeof(u_int32_t)));
+}
+
+void AdcHub::connect(const User* user, string const& token) {
 	if(state != STATE_NORMAL)
 		return;
-	string tmp = (SETTING(CONNECTION_TYPE) == SettingsManager::CONNECTION_ACTIVE) ? "DCTM " : "DRCM ";
-	tmp += user->getCID().toBase32();
-	tmp += " 0 NMDC/1.0\n";
+	string tmp;
+	if(SETTING(CONNECTION_TYPE) == SettingsManager::CONNECTION_ACTIVE) {
+		tmp = "DCTM " + user->getCID().toBase32() + " " +
+				getMe()->getCID().toBase32() + " " + token + " ADC/1.0 " +
+				Util::toString(SETTING(IN_PORT)) + "\n";
+	} else {
+		tmp = "DRCM " + user->getCID().toBase32() + " " +
+				getMe()->getCID().toBase32() + " " + token + " ADC/1.0\n";
+	}
 	send(tmp);
 }
 
@@ -317,11 +349,10 @@ void AdcHub::info() {
 	ADDPARAM(" HR", Util::toString(counts.registered));
 	ADDPARAM(" HO", Util::toString(counts.op));
 	ADDPARAM(" VE", "++\\ " VERSIONSTRING);
+	ADDPARAM(" I4", "0.0.0.0");
 	if(SETTING(CONNECTION_TYPE) == SettingsManager::CONNECTION_ACTIVE) {
-		ADDPARAM(" I4", "0.0.0.0");
 		ADDPARAM(" U4", Util::toString(SETTING(IN_PORT)));
 	} else {
-		ADDPARAM(" I4", "");
 		ADDPARAM(" U4", "");
 	}
 
@@ -354,11 +385,12 @@ void AdcHub::on(Connected) throw() {
 void AdcHub::on(Failed, const string& aLine) throw() { 
 	if(getMe())
 		ClientManager::getInstance()->putUserOffline(getMe());
+	state = STATE_PROTOCOL;
 	setMe(NULL);
 	state = STATE_PROTOCOL;
 	fire(ClientListener::Failed(), this, aLine);
 }
 /**
  * @file
- * $Id: AdcHub.cpp,v 1.19 2004/10/05 16:46:42 arnetheduck Exp $
+ * $Id: AdcHub.cpp,v 1.20 2004/10/21 10:27:15 arnetheduck Exp $
  */
