@@ -25,10 +25,11 @@
 class AdcHub;
 class ClientManager;
 
-class AdcHub : public Client, CommandHandler<AdcHub> {
+class AdcHub : public Client, public CommandHandler<AdcHub> {
 public:
 
 	virtual void connect(const User* user);
+	virtual void connect(const User* user, string const& token);
 	virtual void disconnect();
 	
 	virtual void hubMessage(const string& aMessage);
@@ -57,6 +58,8 @@ public:
 	void handle(Command::INF, Command& c) throw();
 	void handle(Command::GPA, Command& c) throw();
 	void handle(Command::QUI, Command& c) throw();
+	void handle(Command::CTM, Command& c) throw();
+	void handle(Command::RCM, Command& c) throw();
 
 	virtual string escape(string const& str) const { return Command::escape(str); };
 
@@ -92,5 +95,5 @@ private:
 
 /**
  * @file
- * $Id: AdcHub.h,v 1.14 2004/10/05 16:46:42 arnetheduck Exp $
+ * $Id: AdcHub.h,v 1.15 2004/10/21 10:27:15 arnetheduck Exp $
  */
