@@ -141,6 +141,7 @@ public:
 	GETSET(string, nick, Nick);
 	GETSET(string, defpassword, Password);
 	GETSET(bool, registered, Registered);
+	GETSET(u_int32_t, reconnDelay, ReconnDelay);
 protected:
 	struct Counts {
 		Counts(long n = 0, long r = 0, long o = 0) : normal(n), registered(r), op(o) { };
@@ -189,5 +190,5 @@ private:
 #endif // _CLIENT_H
 /**
  * @file
- * $Id: Client.h,v 1.89 2004/10/05 16:46:42 arnetheduck Exp $
+ * $Id: Client.h,v 1.90 2004/10/21 10:27:15 arnetheduck Exp $
  */
