@@ -26,6 +26,7 @@ settings_usercommands.html
 chat_commands.html
 non-routable.html
 plusplus_tag.html
+netiquette.html
 credits.html
 
 [ALIAS]
