@@ -9,9 +9,22 @@
 <h1>Help for DC++</h1>
 <br>
 <img src="logo.gif" alt="Logo" style="width: 132px; height: 127px;"
- align="right"> Overview<br>
+ align="right">
+<h2>Documentation</h2>
+<br>
 <a href="changelog.html">Changelog</a><br>
+This page contains everything that has changed in the history of DC++. Read this
+to find out about features that are poorly or not documented at all. You'll also
+find all the people that have contributed code to DC++ here.<br>
+<br>
+<a href="netiquette.html">Etiquette for Direct Connect usage</a><br>
+You may not agree with everything in this page, but reading the advice never
+hurts. The page outlines some simple guidlines that make the use of the
+Direct Connect Network more enjoyable for everyone.<br>
+<br>
 <a href="credits.html">Credits</a><br>
+View the credits and license of this help file.
+<br>
 <h2>Settings</h2>
 <div style="margin-left: 40px;"> <a href="settings_general.html">General</a><br>
 <a href="settings_downloads.html">Downloads</a><br>
