@@ -84,7 +84,7 @@ updated databases they provide are not compatible with DC++.</dd>
 </dl>
 <h2>Miscellaneous</h2>
 <dl style="margin-left: 40px;">
-  <dt>Default Away Message</dt>
+  <dt><a name="awaymsg"></a>Default Away Message</dt>
   <dd>This is the default away message that will appear when someone
 PMs you for the first time while you are in the away mode.&nbsp; You
 can activate away mode by using the <a
