@@ -24,6 +24,8 @@
 * Help file work (garg, ullner)
 * Added petabytes (PiB) (thanks garg)
 * Clicking on active tab will deactivate it (thanks garg)
+* Fixed an issue with loading invalid virtual names when upgrading (thanks garg)
+* Fixed another issue with user commands (thanks garg)
 
 
 -- 0.4034 2004-10-03 --
